# hello-fastapi

./: .editorconfig  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: package.yml  static-analysis.yml  test-docker.yml  test-podman.yml  test-pypy.yml  test-python.yml
