[project]
name = "hello-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.venv",
    "**/venv",
    "**/.git",
]
line-length = 100
preview = true