[project]
name = "hello-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pyright>=1.1.408",
    "ty>=0.0.19",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
    "ruff>=0.12.7",
]

[tool.ruff]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.venv",
    "**/venv",
    "**/.git",
]
line-length = 100
preview = true
